Bug 921834.  Add support for .dataset on SVGElement.  r=bkelly